testdata/baselines/reference/conformance/typedefModuleExportsIndirect3.errors.txt
typedefModuleExportsIndirect3.js(3,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== typedefModuleExportsIndirect3.js (1 errors) ====
    /** @typedef {{ a: 1, m: 1 }} C */
    const o = {};
    module.exports = o;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
==== use.js (0 errors) ====
    /** @typedef {import('./typedefModuleExportsIndirect3').C} C */
    /** @type {C} */
    var c
    